--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "apollo-server-express": "^3.10.2",
+    "dotenv": "^16.0.2",
+    "graphql": "^16.6.0",
     "react": "^18.2.0"
   }
 }
