--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "apollo-server-express": "^3.10.2",
-    "dotenv": "^16.0.2",
-    "graphql": "^16.6.0",
-    "react": "^18.2.0"
+    "dotenv": "^16.0.2"
   }
 }
